--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 
 <body>
-    <div class="canvas">
+    <div class="frame">
+        <div class="canvas">
+            <div class="one"></div>
+        </div>
     </div>
 </body>
 
