adding final changes

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 
 <body>
+    <h1> Rothko Painting </h1>
     <div class="frame">
         <div class="canvas">
             <div class="one"></div>
+            <div class="two"></div>
+            <div class="three"></div>
         </div>
     </div>
 </body>
